<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/buttonbackground">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/testorderid"
        android:textColor="@color/primaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/testorderdate"
        android:textColor="@color/primaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_pieces"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/amountofpieces"
        android:textColor="@color/primaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/testordertotal"
        android:textColor="@color/primaryText"
        android:textSize="14sp" />
</LinearLayout>
