<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_range"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/start_date"
        android:inputType="date"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/end_date"
        android:inputType="date"
        android:textColor="#FFFFFF"/>
</LinearLayout>
